--- a/src/components/List/list.css
+++ b/src/components/List/list.css
@@ -1,9 +1,9 @@
 .listContainer {
   font-family: 'Lato', sans-serif;
-  font-size: 20px;
+  font-size: 14px;
   margin: 20px;
 }
 
 .button {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
